<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button"
        android:id="@+id/buttonHttp"
        android:text="@string/http"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button"
        android:id="@+id/buttonRetrofit"
        android:text="@string/retrofit"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/AppTheme.Button"
        android:id="@+id/buttonAdvanceMap"
        android:text="@string/advance_map"/>

</LinearLayout>