<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/app_background_color">

        <ImageButton
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:background="@drawable/cross"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/imageButton_close" />

        <TextView
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Title"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView2"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login"
            android:orientation="vertical"
            android:padding="@dimen/screen_padding">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:inputType="textPersonName"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/name"
                android:ems="10"
                android:id="@+id/editText_name"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:ems="10"
                android:id="@+id/editText_email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/editText_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:inputType="textPassword"
                android:hint="@string/password_repeat"
                android:ems="10"
                android:id="@+id/editText_password_repeat" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditText"
                android:hint="@string/phone"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editText_phone" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Spinner"
                android:id="@+id/spinner_gender"/>

            <Button
                android:text="@string/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_components"
                style="@style/AppTheme.Button"
                android:backgroundTint="@android:color/holo_red_light"
                android:id="@+id/button_signup" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>
