<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yohan.dummyapp.activity.ForgotPasswordActivity"
    android:background="@drawable/bg_login"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/app_background_color">

        <ImageButton
            android:layout_width="@dimen/box_size"
            android:layout_height="@dimen/box_size"
            android:background="@drawable/cross"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:id="@+id/imageButton_close" />

        <TextView
            android:text="@string/forgot_passsword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Title"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_components_large">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/AppTheme.EditText"
                android:ems="10"
                android:hint="@string/registered_email"
                android:id="@+id/editText_password_reset_email" />

            <Button
                android:text="@string/reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.Button"
                android:id="@+id/button_reset_password"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
