<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:padding="@dimen/screen_padding">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_linear_layout"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vertical"
            android:gravity="center"
            android:layout_margin="@dimen/margin_components"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/holo_blue_light">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_components_small"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/lorem_ipsum"/>

            <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_components_small"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:text="@string/lorem_ipsum"/>

            <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_components_small"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:text="@string/lorem_ipsum"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/horizontal"
            android:gravity="center"
            android:layout_margin="@dimen/margin_components"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:color/holo_blue_light"
            android:layout_marginTop="@dimen/margin_components">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_components_small"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/lorem_ipsum"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_components_small"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/lorem_ipsum"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_components_small"
                android:backgroundTint="@android:color/holo_red_light"
                android:text="@string/lorem_ipsum"
                android:layout_weight="1"/>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>